--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@hapi/vision": "^6.1.0",
     "automapper-ts": "^1.9.0",
     "configue": "^1.3.6",
-    "hapi-swagger": "^14.2.4",
+    "hapi-swagger": "^9.4.2",
     "hapijs-status-monitor": "^1.0.1",
     "inversify": "^6.0.1",
     "pg": "^8.7.1",
@@ -39,5 +39,16 @@
     "ts-node": "^8.3.0",
     "tslint": "^5.4.3",
     "typescript": "^4.4.0"
-  }
+  },
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/robertlaingtxmq/hapi-starter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/robertlaingtxmq/hapi-starter/issues"
+  },
+  "homepage": "https://github.com/robertlaingtxmq/hapi-starter#readme"
 }
